<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>it.maggioli.pagopa.pagonet</groupId>
  <artifactId>jppa-notify</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>jppa-notify</name>
  <url>http://maven.apache.org</url>

  <!-- <parent>
    <groupId>it.maggioli.informatica.base.pom</groupId>
    <artifactId>pagonet-base</artifactId>
    <version>1.2.0</version>
    <relativePath/>
  </parent> -->

  <properties>
    <java.version>19</java.version>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <cxf.version>4.0.3</cxf.version>
    <jaxb2-maven-plugin.version>3.1.0</jaxb2-maven-plugin.version>
    <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
  </properties>

   <build>
      <finalName>jppa-notify</finalName>
      <plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<compilerVersion>${java.version}</compilerVersion>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>


         <!-- <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <source>${java.version}</source>
               <target>${java.version}</target>
            </configuration>
         </plugin> -->

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>jaxb2-maven-plugin</artifactId>
          <version>${jaxb2-maven-plugin.version}</version>
          <executions>
              <execution>
                <id>xjc</id>
                <phase>generate-sources</phase>
                <goals>
                    <goal>xjc</goal>
                </goals>
              </execution>
          </executions>
          <configuration>
              <sources>
                <source>src/main/resources/soap/xsd</source>
              </sources>
          </configuration>
        </plugin>

         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <version>${build-helper-maven-plugin.version}</version>
            <executions>
               <execution>
                  <id>add-source</id>
                  <phase>generate-sources</phase>
                  <goals>
                     <goal>add-source</goal>
                  </goals>
                  <configuration>
                     <sources>
                        <source>${basedir}/target/generated-sources/jaxb</source>
                        <source>${basedir}/target/generated-sources/cxf</source>
                     </sources>
                  </configuration>
               </execution>
            </executions>
         </plugin>

         <plugin>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-codegen-plugin</artifactId>
            <version>${cxf.version}</version>
            <configuration>
               <fork>once</fork>
               <additionalJvmArgs>-Djava.endorsed.dirs="${project.build.directory}"/endorsed</additionalJvmArgs>
               <additionalJvmArgs>-Djavax.xml.accessExternalSchema=all</additionalJvmArgs>
               <encoding>UTF-8</encoding>
            </configuration>
            <executions>
               <execution>
                  <id>generate-sources</id>
                  <phase>generate-sources</phase>
                  <configuration>
                     <sourceRoot>${project.build.directory}/generated-sources/cxf</sourceRoot>
                     <wsdlOptions>
                        <wsdlOption>
                           <wsdl>${basedir}/src/main/resources/soap/wsdl/pago-pa-notify.wsdl</wsdl>
                           <wsdlLocation>classpath:soap/wsdl/pago-pa-notify.wsdl</wsdlLocation>
                           <!-- <extraargs>
                              <extraarg>-frontend</extraarg>
                              <extraarg>jaxws21</extraarg>
                              <extraarg>-client</extraarg>
                              <extraarg>-verbose</extraarg>
                           </extraargs> -->
                        </wsdlOption>
                     </wsdlOptions>
                  </configuration>
                  <goals>
                     <goal>wsdl2java</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>

         <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <executions>
               <execution>
                     <goals>
                        <goal>repackage</goal>
                     </goals>
               </execution>
            </executions>
         </plugin>

      </plugins>
    </build>


  <dependencies>

   <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web-services</artifactId>
      <version>3.2.0</version>
   </dependency>

   <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <version>3.2.0</version>
   </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
     		<version>3.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
     		<version>3.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
         <version>42.7.0</version>
			<scope>compile</scope>
		</dependency>


		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
  		<version>3.2.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-core</artifactId>
				<version>${cxf.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-frontend-jaxws</artifactId>
				<version>${cxf.version}</version>
				<exclusions>
					<exclusion>
						<groupId>asm</groupId>
						<artifactId>asm</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- <dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-ws-security</artifactId>
				<version>${cxf.version}</version>
			</dependency> -->

			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-features-logging</artifactId>
				<version>${cxf.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-transports-http</artifactId>
				<version>${cxf.version}</version>
			</dependency>

         <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
         </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    
	<dependency>
		<groupId>com.seda.payer.core</groupId>
		<artifactId>com.seda.payer.core</artifactId>
		<version>2.10.0</version>
		<scope>compile</scope>
	</dependency>

	<dependency>
		<groupId>it.maggioli.pagopa.jppa.client</groupId>
		<artifactId>it.maggioli.pagopa.jppa.client</artifactId>
		<version>1.1.0</version>
	</dependency>
  </dependencies>
</project>
